# libtheora-feedstock

./: .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-win.yml
.ci_support/: win_.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: CMakeLists.txt  build.sh  meta.yaml
